--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="container principal">
         <div class="container__caixa">
     <h1>Milho é um cereal cultivado em grande parte do mundo e extensivamente utilizado como alimento humano ou para ração animal devido às suas qualidades nutricionais.</h1> 
-    <img src="mi.png" alt="O combo+ é a junção do alura+ e o alura língua"class="container__imagem">
+    <img src="lho.jpeg" alt="O combo+ é a junção do alura+ e o alura língua"class="container__imagem">
     <a href="www.primevideo.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
     <a href="www.primevideo.com.br" class="container__botao botao_secundario">Assinar somente o Alura+</a>
     <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
