--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <img src="lho.jpeg" alt="O combo+ é a junção do alura+ e o alura língua"class="container__imagem">
     <a href="https://pt.wikipedia.org/wiki/Milho" class="container__botao">Milho</a>
     <a href="https://pt.wikipedia.org/wiki/Milho" class="container__botao botao_secundario">sobre o milho/a>
-    <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
+    <p class="container__aviso"></p>
        
         </div>
 </section>
