--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         </div>
 </section>
 <section class="container secundario">
-    <img src="img/Plataformas.png" alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
+    <img src="co.png" alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
     <div class="container__descricao">
-        <h2 class="descricao__titulo">Assista do seu jeito</h2>
+        <h2 class="descricao__titulo">colheita do milho</h2>
         <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros
             aparelhos. Nossa seleção de cursos não para de crescer.</p>
 
