--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
     <img src="co.png" alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
     <div class="container__descricao">
         <h2 class="descricao__titulo">colheita do milho</h2>
-        <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros
-            aparelhos. Nossa seleção de cursos não para de crescer.</p>
+        <p class="descricao__texto">A colheita pode começar a partir da maturação fisiológica dos grãos, fase esta que ocorre quando, no ponto de junção dos grãos com o sabugo, forma-se um ponto preto. Quando mais de 50% dos grãos amostrados encontram-se na maturação fisiológica, omilho éconside- rado maduro..</p>
 
 
     </div>
