--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
     <ul class="dispositivos__lista">
         <li>
-            <img src="img/tv.png" alt="Ícone de televisão">
+            <img src="espiga de milho.png" alt="Ícone de televisão">
             <h3 class="lista__item">TV</h3>
         </li>
         <li>
