--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
 <section class="container secundario">
     <div class="container__descricao">
         <p class="descricao__texto">
-            Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da
-            tecnologia e aprender inglês ou espanhol, onde e como quiser.
+            Com incidência nos estados do Acre e Rondônia, essa espécie gera as preparações de chicha, bolo, pão, broa, mingau, pamonha, cuscuz canjica e pode ser consumido também in natura. Presente nos estados do Mato Grosso do Sul e Minas Gerais é utilizado para o preparo de pamonha, curau, canjica e consumido in natura.
         </p>
         <a href="www.alura.com.br" class="container__botao secundario__botao" container>Assine o Combo+</a>
     </div>
