--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 
 <section class="container secundario">
     <div class="container__descricao">
+        <h1>o que e feito com o milho</h1>
         <p class="descricao__texto">
-            Com incidência nos estados do Acre e Rondônia, essa espécie gera as preparações de chicha, bolo, pão, broa, mingau, pamonha, cuscuz canjica e pode ser consumido também in natura. Presente nos estados do Mato Grosso do Sul e Minas Gerais é utilizado para o preparo de pamonha, curau, canjica e consumido in natura.
+            O milho é grandemente empregado como matéria-prima industrial. A partir do cereal são fabricados inúmeros produtos, como óleo, fubá, biscoitos, pães, massas, bolachas, etc. Outro grande segmento consumidor é o de fabricação de rações animais.
         </p>
         <a href="www.alura.com.br" class="container__botao secundario__botao" container>Assine o Combo+</a>
     </div>
