--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <p class="descricao__texto">
             O milho é grandemente empregado como matéria-prima industrial. A partir do cereal são fabricados inúmeros produtos, como óleo, fubá, biscoitos, pães, massas, bolachas, etc. Outro grande segmento consumidor é o de fabricação de rações animais.
         </p>
-        <a href="www.alura.com.br" class="container__botao secundario__botao" container>Assine o Combo+</a>
+        <a href="https://mundoeducacao.uol.com.br/saude-bem-estar/milho.htm#:~:text=O%20milho%20%C3%A9%20grandemente%20empregado,de%20fabrica%C3%A7%C3%A3o%20de%20ra%C3%A7%C3%B5es%20animais." class="container__botao secundario__botao" container>milho</a>
     </div>
     <img src="pipoca.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
 </section>
