--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </p>
         <a href="https://mundoeducacao.uol.com.br/saude-bem-estar/milho.htm#:~:text=O%20milho%20%C3%A9%20grandemente%20empregado,de%20fabrica%C3%A7%C3%A3o%20de%20ra%C3%A7%C3%B5es%20animais." class="container__botao secundario__botao" container>milho</a>
     </div>
-    <img src="pipoca.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
+    <img src="bolo_de_milho_verde_caipira_10199_600.jpg" alt="Tela do alura+ e alura língua" class="secundario__imagem">
 </section>
 
 <section class="dispositivos">
