--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
     <ul class="dispositivos__lista">
         <li>
-            <img src="plantiu.png" alt="Ícone de televisão">
-            <h3 class="lista__item">TV</h3>
+            <img src="download.jpg" alt="Ícone de televisão">
+            <h3 class="lista__item">novinho</h3>
         </li>
         <li>
             <img src="img/computador.png" alt="Ícone de computador">
