--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             <h3 class="lista__item">novinho</h3>
         </li>
         <li>
-            <img src="img/computador.png" alt="Ícone de computador">
-            <h3 class="lista__item">Computador</h3>
+            <img src="images.jpg" alt="Ícone de computador">
+            <h3 class="lista__item">verde</h3>
         </li>
         <li>
             <img src="img/celular.png" alt="Ícone de celular">
