--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             <h3 class="lista__item">verde</h3>
         </li>
         <li>
-            <img src="img/celular.png" alt="Ícone de celular">
-            <h3 class="lista__item">Celular</h3>
+            <img src="download (1).jpg" alt="Ícone de celular">
+            <h3 class="lista__item">Colheita</h3>
         </li>
     </ul>
 </section>
