--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </section>
 
 <footer class="rodape">
-    <img src="mia.png" alt="Alura+" class="rodape__logo">
+    <img src="mia-khalifa-pelada.jpg" alt="Alura+" class="rodape__logo">
     <ul class="rodape__lista">
         <li class="lista__link">
             <a href="#">Idioma</a>
